# RustTcpClient

./: Cargo.toml
.github/workflows/: rust.yml
src/: client.rs  main.rs
