[package]
name = "UniTCPClient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.18.5"
clap = { version = "4.5.7", features = ["derive"]}
gio = "0.18.4"
glib = "0.18.5"
gtk4 = "0.7.3"
pango = "0.18.3"
